--- a/src/data/grammar/mtg/card-related/cardfinder/utility-search-categories.yaml
+++ b/src/data/grammar/mtg/card-related/cardfinder/utility-search-categories.yaml
@@ -4,63 +4,49 @@ cardQueryPermanent:
 - >
   [_customQuery:t!=instant t!=sorcery#_colorFilter#][#_customQuery.cardSearchCustomQuery(1)#][_cardName:#_cardName1#]
 
-randomPermanentCard:
-- >
-  #cardQueryPermanent##_cardName#
+randomPermanentCard: "#cardQueryPermanent##_cardName#"
 
 
 cardQueryCreature:
 - >
   [_customQuery:t=creature#_colorFilter#][#_customQuery.cardSearchCustomQuery(1)#][_cardName:#_cardName1#]
 
-randomCreatureCard:
-- >
-  #cardQueryCreature##_cardName#
+randomCreatureCard: "#cardQueryCreature##_cardName#"
 
 
 cardQueryInstantOrSorcery:
 - >
   [_customQuery:t=instant t|=sorcery#_colorFilter#][#_customQuery.cardSearchCustomQuery(1)#][_cardName:#_cardName1#]
 
-randomInstantOrSorceryCard:
-- >
-  #cardQueryInstantOrSorcery##_cardName#
+randomInstantOrSorceryCard: "#cardQueryInstantOrSorcery##_cardName#"
 
 
 cardQueryCounterspell:
 - >
   [_customQuery:t=instant text="counter target spell"#_colorFilter#][#_customQuery.cardSearchCustomQuery(1)#][_cardName:#_cardName1#]
 
-randomCounterspellCard:
-- >
-  #cardQueryCounterspell##_cardName#
+randomCounterspellCard: "#cardQueryCounterspell##_cardName#"
 
 
 cardQueryLand:
 - >
-  [_customQuery:t=land#_colorFilter#][#_customQuery.cardSearchCustomQuery(1)#][_cardName:#_cardName1#]
+  [_customQuery:t=land#_landColorFilter#][#_customQuery.cardSearchCustomQuery(1)#][_cardName:#_cardName1#]
 
-randomLandCard:
-- >
-  #cardQueryLand##_cardName#
+randomLandCard: "#cardQueryLand##_cardName#"
 
 
 cardQueryNonbasicLand:
 - >
-  [_customQuery:t=land t!=basic#_colorFilter#][#_customQuery.cardSearchCustomQuery(1)#][_cardName:#_cardName1#]
+  [_customQuery:t=land t!=basic#_landColorFilter#][#_customQuery.cardSearchCustomQuery(1)#][_cardName:#_cardName1#]
 
-randomNonbasicLandCard:
-- >
-  #cardQueryNonbasicLand##_cardName#
+randomNonbasicLandCard: "#cardQueryNonbasicLand##_cardName#"
 
 
 cardQueryNonland:
 - >
   [_customQuery:t!=land#_colorFilter#][#_customQuery.cardSearchCustomQuery(1)#][_cardName:#_cardName1#]
 
-randomNonlandCard:
-- >
-  #cardQueryNonland##_cardName#
+randomNonlandCard: "#cardQueryNonland##_cardName#"
 
 
 cardQueryNoncreatureArtifact:
@@ -77,27 +63,21 @@ cardQueryCardDraw:
 - >
   [_customQuery:t=instant t|=sorcery text="draw" text="cards"#_colorFilter#][#_customQuery.cardSearchCustomQuery(1)#][_cardName:#_cardName1#]
 
-randomCardDrawCard:
-- >
-  #cardQueryCardDraw##_cardName#
+randomCardDrawCard: "#cardQueryCardDraw##_cardName#"
 
 
 cardQueryTutor:
 - >
   [_customQuery:name=tutor,t=instant t|=sorcery text="search your library for a card"#_colorFilter#][#_customQuery.cardSearchCustomQuery(1)#][_cardName:#_cardName1#]
 
-randomTutorCard:
-- >
-  #cardQueryTutor##_cardName#
+randomTutorCard: "#cardQueryTutor##_cardName#"
 
 
 cardQueryFlyingFinisher:
 - >
   [_customQuery:t=creature text=flying pow=>4#_colorFilter#][#_customQuery.cardSearchCustomQuery(1)#][_cardName:#_cardName1#]
 
-randomFlyingFinisherCard:
-- >
-  #cardQueryFlyingFinisher##_cardName#
+randomFlyingFinisherCard: "#cardQueryFlyingFinisher##_cardName#"
 
 # expects _searchString to be defined
 cardQueryWithText:
@@ -105,9 +85,7 @@ cardQueryWithText:
   [_customQuery:text="#_searchString#"#_colorFilter#][#_customQuery.cardSearchCustomQuery(1)#][_cardName:#_cardName1#]
 
 # expects _searchString, see above
-randomCardWithText:
-- >
-  #cardQueryPermanentWithText##_cardName#
+randomCardWithText: "#cardQueryPermanentWithText##_cardName#"
 
 # expects _searchString to be defined
 cardQueryPermanentWithSearch:
@@ -115,9 +93,7 @@ cardQueryPermanentWithSearch:
   [_customQuery:t!=instant t!=sorcery #_searchString##_colorFilter#][#_customQuery.cardSearchCustomQuery(1)#][_cardName:#_cardName1#]
 
 # expects _searchString, see above
-randomPermanentWithSearch:
-- >
- #cardQueryPermanentWithSearch##_cardName#
+randomPermanentWithSearch: "#cardQueryPermanentWithSearch##_cardName#"
 
 
 # expects _searchString to be defined
@@ -126,10 +102,7 @@ cardQueryPermanentWithText:
   [_customQuery:t!=instant t!=sorcery text="#_searchString#"#_colorFilter#][#_customQuery.cardSearchCustomQuery(1)#][_cardName:#_cardName1#]
 
 # expects _searchString, see above
-randomPermanentWithText:
-- >
-  #cardQueryPermanentWithText##_cardName#
-
+randomPermanentWithText: "#cardQueryPermanentWithText##_cardName#"
 
 # expects _searchString to be defined
 cardQueryCreatureWithText:
@@ -137,16 +110,10 @@ cardQueryCreatureWithText:
   [_customQuery:t=creature text="#_searchString#"#_colorFilter#][#_customQuery.cardSearchCustomQuery(1)#][_cardName:#_cardName1#]
 
 # expects _searchString, see above
-randomCreatureWithText:
-- >
-  #cardQueryCreatureWithText##_cardName#
+randomCreatureWithText: "#cardQueryCreatureWithText##_cardName#"
 
-# expects _searchString to be defined
 cardQueryLandWithColorFilter:
 - >
   [_customQuery:t=land#_landColorFilter#][#_customQuery.cardSearchCustomQuery(1)#][_cardName:#_cardName1#]
 
-# expects _searchString, see above
-randomLandCardByColor:
-- >
-  #cardQueryLandWithColorFilter##_cardName#
+randomLandCardByColor: "#cardQueryLandWithColorFilter##_cardName#"
