--- a/src/data/grammar/mtg/story/mtg-locations.yaml
+++ b/src/data/grammar/mtg/story/mtg-locations.yaml
@@ -44,7 +44,7 @@
       "Sunhome",
       "Suq'Ata",
       "Tel-Jilad",
-      "The Tangle",
+      "the Tangle",
       "Tolaria",
       "Ulgrotha",
       "Uktabi",
